# booktracker

./: .coverage  .gitignore  README.md  pyproject.toml
src/: app.py  app.tcss  books.py  config.json  db.py  openlibrary.py  schema.py  stats.py
tests/: test_schema.py
