[project]
name = "booktracker"
version = "0.1.0"
description = "Python Textual application to track books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest-textual-snapshot>=1.1.0",
    "pytest>=8.3.4",
]
