[project]
name = "booktracker"
version = "0.1.0"
description = "Python Textual application to track books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "textual-dev>=1.7.0",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
